因为服务器内存过小，部署不了过多JVM，优化Dockerfile和github workflow配置
- 分开构建和推送后端镜像以提高效率
- 修改Dockerfile中的内存配置以适应不同模块的需求
- 更新github workflow中的镜像推送标签